--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,6 @@ jobs:
         with:
           context: .
           push: true
-          # ⭐ 이미지 이름을 새 프로젝트에 맞게 수정해주세요.
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-php-board-app:latest
 
   # CD Job: EC2 서버에 접속하여 Docker Compose로 전체 서비스 배포
@@ -47,7 +46,6 @@ jobs:
             rm -rf my-php-board-project
             git clone $REPO_URL
 
-            # 3. 프로젝트 디렉토리로 이동
             cd my-php-board-project
 
             # 4. DB 비밀번호 등 민감한 정보를 .env 파일로 생성
@@ -56,9 +54,7 @@ jobs:
             echo "MYSQL_USER=${{ secrets.DB_USER }}" >> .env
             echo "MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
 
-            # 5. ⭐⭐⭐ 핵심 수정 부분 ⭐⭐⭐
             #    모든 docker 및 docker-compose 명령어를 'docker' 그룹 권한으로 실행합니다.
-            #    이렇게 하면 'Cannot connect to the Docker daemon' 오류를 해결할 수 있습니다.
-            sudo -E docker-compose pull
-            sudo -E docker-compose up -d --build
+            sudo -E docker compose pull
+            sudo -E docker compose up -d --build
             sudo -E docker image prune -f
